# RealTimePoseEsitmationDancingGame

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENCE.md  README.MD
cpp/: CMakeLists.txt
cpp/assets/: names.txt
cpp/cmake/Modules/: FindBerkeleyDB.cmake  FindGFlags.cmake  FindGlog.cmake
cpp/include/: FrameKeypoints.h  KeypointModelPredictor.h  PersonIdentifier.h  PersonNamer.h  PersonStorage.h  ScoreTracker.h  ThemeManager.h  UpperBodyRaisedHandPredictor.h  VideoOverlayDemo.h  VideoPoseCapture.h  VideoPoseDataExtractor.h  VideoProcessor.h  VideoRaisedArmDemo.h  extract_from_video.h  extract_utils.h  keras_model.h
cpp/src/: FrameKeypoints.cpp  KeypointModelPredictor.cpp  PersonIdentifier.cpp  PersonNamer.cpp  PersonStorage.cpp  ScoreTracker.cpp  ThemeManager.cpp  UpperBodyRaisedHandPredictor.cpp  VideoOverlayDemo.cpp  VideoPoseCapture.cpp  VideoPoseDataExtractor.cpp  VideoProcessor.cpp  VideoRaisedArmDemo.cpp  detect_hands.cpp  edmodo_head.cpp  extract_from_image.cpp  extract_from_video.cpp  extract_utils.cpp  keras_model.cpp
models/: pose  raised-hands-upper-body-only.model
python/: kerasify.py  train_model.py
samples/: left-arm-raised.txt  left-arm-raised_test.txt  normal.txt  normal_test.txt  right-arm-raised.txt  right-arm-raised_test.txt
